--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Hello</title>
   <meta charset="utf-8">
+  <script type="module" src="./src/index.js"></script>
 </head>
 <body>
-    <div>My static 2.0.</div>
 </body>
 </html> 
