--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello</title>
+  <title>My aweseome chat</title>
   <meta charset="utf-8">
   <script type="module" src="./src/index.js"></script>
 </head>
