--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <script type="module" src="./src/index.js"></script>
+  <script type="module" src="./src/index.ts"></script>
 </body>
 </html> 
