sprint 2: attempt to solve validation

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <title>My aweseome chat</title>
   <meta charset="utf-8">
+  <script type="module" src="./src/index.ts"></script>
 </head>
 <body>
-  <script type="module" src="./src/index.ts"></script>
+  <div class='app'></div>
 </body>
 </html> 
